--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">  
+    <link rel="stylesheet" href="styles/styles.css">  
 </head>
 <body>
     <input type="file" id="inputFile" accept="image/*" onchange="openFile(event)">    
@@ -16,6 +16,6 @@
     <script src="node_modules/canvas-png-compression/dist/bundle.js"></script>
     <script src="node_modules/exif-js/exif.js"></script>
     <script src="node_modules/canvas-compress/dist/canvas-compress.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
