--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <h2>image src</h2>
     <img id="imgSource"> 
     <h2>image optimized</h2>
-    <img id="imgOptimized">
+    <img id="imgResult">
     <script src="node_modules/canvas-png-compression/dist/bundle.js"></script>
     <script src="node_modules/exif-js/exif.js"></script>
     <script src="node_modules/canvas-compress/dist/canvas-compress.js"></script>
+    <script src="scripts/imageUtils.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
